force-app/main/default/objects/InvoiceLine__c/InvoiceLine__c.object-meta.xml
<CustomObject>
    <description>Invoice or Credit Memo Lines.</description>
    <label>Invoice Line (NAV)</label>
    <nameField>
        <label>InvoiceLine No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines (NAV)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>