force-app/main/default/objects/InvoiceLine__c/fields/Amount_Including_VAT__c.field-meta.xml
<CustomField>
    <fullName>Amount_Including_VAT__c</fullName>
    <label>Amount Including VAT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>