force-app/main/default/objects/InvoiceLine__c/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <label>Description2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>