force-app/main/default/objects/InvoiceLine__c/fields/Job_Task_No__c.field-meta.xml
<CustomField>
    <fullName>Job_Task_No__c</fullName>
    <label>Job Task No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>