force-app/main/default/objects/InvoiceLine__c/fields/Line_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount_Amount__c</fullName>
    <label>Line Discount Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>