force-app/main/default/objects/InvoiceLine__c/fields/Posting_Group__c.field-meta.xml
<CustomField>
    <fullName>Posting_Group__c</fullName>
    <label>Posting Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>