force-app/main/default/objects/InvoiceLine__c/fields/Quantity_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Invoiced__c</fullName>
    <description>Pulled from NAV integration - Blanket Order Line value</description>
    <label>Quantity Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>