force-app/main/default/objects/InvoiceLine__c/fields/Shipment_Line_No__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Line_No__c</fullName>
    <label>Shipment Line No.</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>