force-app/main/default/objects/InvoiceLine__c/fields/Shipment_No__c.field-meta.xml
<CustomField>
    <fullName>Shipment_No__c</fullName>
    <label>Shipment No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>