force-app/main/default/objects/InvoiceLine__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Unique key used as link on update-add transfers - for salesforce.com upsert facility</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>