force-app/main/default/objects/InvoiceLine__c/fields/VAT_Difference__c.field-meta.xml
<CustomField>
    <fullName>VAT_Difference__c</fullName>
    <label>VAT Difference</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>