force-app/main/default/objects/InvoiceLine__c/fields/VAT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percentage__c</fullName>
    <label>VAT %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>